// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostMedia /> should render 1 image 1`] = `
<div>
  <div
    class="post-media post-media--1"
  >
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image1.jpg);"
    />
  </div>
</div>
`;

exports[`<PostMedia /> should render 2 image 1`] = `
<div>
  <div
    class="post-media post-media--2"
  >
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image1.jpg);"
    />
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image2.jpg);"
    />
  </div>
</div>
`;

exports[`<PostMedia /> should render 3 image 1`] = `
<div>
  <div
    class="post-media post-media--3"
  >
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image1.jpg);"
    />
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image2.jpg);"
    />
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image3.jpg);"
    />
  </div>
</div>
`;

exports[`<PostMedia /> should render 4 image 1`] = `
<div>
  <div
    class="post-media post-media--4"
  >
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image1.jpg);"
    />
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image2.jpg);"
    />
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image3.jpg);"
    />
    <div
      class="post-media__image"
      style="background-image: url(http://foo.com/image4.jpg);"
    />
  </div>
</div>
`;

exports[`<PostMedia /> should render with a video 1`] = `
<div>
  <div
    class="post-media post-media--1"
  >
    <video
      class="post-media__video"
      controls=""
      src="http://foo.com/video.mov"
    />
  </div>
</div>
`;

exports[`<PostMedia /> should render with no media 1`] = `
<div>
  <div
    class="post-media post-media--0 post-media--empty"
  >
    No media
  </div>
</div>
`;
